$Id$

GENERAL:
- Adapting to Code Warrior for Windows and Macintosh.
- Fixing g++ warning.

BITBCH:
- Fixing bug.

BTF:
- Adding a dummy 'Exists()' method, due to changes in 'STK' library.

CTN:
- Renaming the 'Sync()' method in 'Set()' and 'Flush()'.
- Fixing GNU GCC issues.

DBT:
- Adapting to changes in 'LST' library.

DTR:
- Fixing call to an iexistent method;

ERR:
- Adding the 'tReturn' item.

IDS:
- Adapting to changes in 'STK' library.

LST:
- Renaming 'CreateEntry' to 'New'.

LSTBCH:
- Fixing bug.
- Adapting to changes in 'LST' library.

LSTCTN:
- Fixing bug.
- Adapting to changes in 'LST' library.
- Adapting to changes in 'CTN' library.
- Adding missing 'F	lush()' to 'Delete' method.

MMI:
- Adding some missing 'const' qualifier'.

QUE:
- Adding some missing 'const' qualifier.

SSNMNG:
- Adapting to changes in 'LST' library.

STK:
- Renaming 'ObjectExists' to 'Exists', to avoid some mistake risks.

TAGDTC:
- Adapting to changes in 'TYM' library.

TOL:
- Correcting the problem in 'NAVt()' for which the gcc 3.x preprocessor issued a warning.

TYM:
- Fixing bug.
- Revert to version before adaptation to CW.
- Adding 'const' qualifier to return value to avoid smoe problems.

--------
20030219
--------

GENERAL:
- Creating library 'BTS'.
- Creating library 'BTF'.
- Creating library 'LSTBCH'.
- Creating library 'LSTCTN'.

AEM:
- Adding 'Exists' method.

CPE:
- Adapting to Metrowerks Codewarrior.

IDS:
- Adapting to changes in 'STK' library.

IDXBTQ:
- Renaming 'Remove', to 'Delete' which seems more appropriate.

LST:
- Renaming 'Remove', to 'Delete' which seems more appropriate.

QUE:
- Renaming 'Remove', to 'Delete' which seems more appropriate.
- Adding 'Exists' method.
- Using the 'BCH' library instead of 'AEM' and 'UYM'.

SSNMNG:
- Adapting to changes in 'LST' library.
- Adapting to changes in 'QUE' library.

STK:
- Renaming 'Exists()' method to 'ObjectExists()', due to modification of the 'tol::NAVt' macro.

STR:
- Adding 'Insert()' method.

TOL: