@@ -1,25 +1,24 @@
 /*
-  Header for the 'mtx' library by Claude L. Simon (simon@epeios.org)
-  Copyright (C) 2000 Claude L. SIMON (simon@epeios.org) 
+	Header for the 'mtx' library by Claude SIMON (csimon@epeios.org)
+	Copyright (C) 2000, 2003  Claude SIMON (csimon@epeios.org).
 
-  This file is part of the Epeios (http://www.epeios.org/) project.
-  
+	This file is part of the Epeios (http://epeios.org/) project.
 
-  This library is free software; you can redistribute it and/or
-  modify it under the terms of the GNU General Public License
-  as published by the Free Software Foundation; either version 2
-  of the License, or (at your option) any later version.
+	This library is free software; you can redistribute it and/or
+	modify it under the terms of the GNU General Public License
+	as published by the Free Software Foundation; either version 2
+	of the License, or (at your option) any later version.
  
-  This program is distributed in the hope that it will be useful,
-  but WITHOUT ANY WARRANTY; without even the implied warranty of
-  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-  GNU General Public License for more details.
+	This program is distributed in the hope that it will be useful,
+	but WITHOUT ANY WARRANTY; without even the implied warranty of
+	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+	GNU General Public License for more details.
 
-  You should have received a copy of the GNU General Public License
-  along with this program; if not, go to http://www.fsf.org/
-  or write to the:
+	You should have received a copy of the GNU General Public License
+	along with this program; if not, go to http://www.fsf.org/
+	or write to the:
   
-                        Free Software Foundation, Inc.,
+         	         Free Software Foundation, Inc.,
            59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 */
 
@@ -30,22 +29,22 @@
 
 #define MTX_NAME		"MTX"
 
-#define	MTX_VERSION	"$Revision$"	
+#define	MTX_VERSION	"$Revision$"
 
-#define MTX_OWNER		"the Epeios project (http://www.epeios.org/)"
+#define MTX_OWNER		"Claude SIMON (csimon@epeios.org)"
 
 #include "ttr.h"
 
 extern class ttr_tutor &MTXTutor;
 
 #if defined( XXX_DBG ) && !defined( MTX_NODBG )
-#define MTX_DBG 
+#define MTX_DBG
 #endif
 
 /* Begin of automatic documentation generation part. */
 
 //V $Revision$
-//C Claude L. SIMON (simon@epeios.org)
+//C Claude SIMON (csimon@epeios.org)
 //R $Date$
 
 /* End of automatic documentation generation part. */
@@ -54,6 +53,11 @@ extern class ttr_tutor &MTXTutor;
 				  /* do not modify anything above this limit */
 				  /*			  unless specified			 */
 				  /*******************************************/
+
+/* Addendum to the automatic documentation generation part. */
+//D MuTeX 
+/* End addendum to automatic documentation generation part. */
+
 /*$BEGIN$*/
 
 /* Addendum to the automatic documentation generation part. */
@@ -61,11 +65,30 @@ extern class ttr_tutor &MTXTutor;
 /* End addendum to automatic documentation generation part. */
 
 #include "bso.h"
+#include "cpe.h"
 
-#if defined( CPE__UNIX ) && !defined( MTX_USE_COUNTER )
-#define MTX__USE_PTHREAD_MUTEX
-#include <pthread.h>
-#include <errno.h>
+#if defined( CPE__UNIX ) && !defined( MTX_USE_COUNTER ) && !defined( CPE__CYGWIN )
+#	define MTX__USE_PTHREAD_MUTEX
+#	include <pthread.h>
+#	include <errno.h>
+#else
+#	define MTX__USE_COUNTER
+#endif
+
+#if !defined( MTX__USE_PTHREAD_MUTEX ) && !defined( MTX__USE_COUNTER )
+#	error "Don't know what mutex type to use."
+#endif
+
+#ifdef MTX_CONTROL
+#	ifdef MTX_DBG
+#		ifdef MTX__USE_PTHREAD_MUTEX
+#			error "'MTX_CONTROL' can not be using pthread mutexes."
+#		else
+#			define MTX__CONTROL
+#		endif
+#	else
+#		error "'MTX_CONTROL' can be used only in debug modus!".
+#	endif
 #endif
 
 #include "stf.h"
@@ -78,15 +101,19 @@ extern class ttr_tutor &MTXTutor;
 
 namespace mtx {
 
-#ifndef MTX__USE_PTHREAD_MUTEX
+#ifdef MTX__USE_COUNTER
 	namespace {
 		typedef bso::ubyte__ counter__;
 	};
 #endif
 
+#ifdef MTX__CONTROL
+#	define MTX_RELEASED_MUTEX	BSO_UBYTE_MAX
+#endif
+
 #ifdef MTX__USE_PTHREAD_MUTEX
 	typedef pthread_mutex_t *mutex_handler__;
-#else
+#elif defined( MTX__USE_COUNTER )
 	//t A mutex handler.
 	typedef counter__ *mutex_handler__;
 #endif
@@ -102,22 +129,11 @@ namespace mtx {
 #ifdef MTX__USE_PTHREAD_MUTEX
 		if ( pthread_mutex_init( Handler, NULL ) != 0 )
 			ERRs();
-#else
+#elif defined( MTX__USE_COUNTER )
 		*Handler = 0;
 #endif
 
 		return Handler;
-	}
-
-	//f Delete the mutex of handler 'Handler'.
-	inline void Delete( mutex_handler__ Handler )
-	{
-#ifdef MTX__USE_PTHREAD_MUTEX
-//		pthread_mutex_destroy( Handler );
-		if ( pthread_mutex_destroy( Handler ) != 0 )
-			ERRs();
-#endif
-		free( Handler );
 	}
 
 	//f Try to lock 'Handler' without blocking. Return 'true' if locks succeed, false otherwise.
@@ -135,7 +151,11 @@ namespace mtx {
 			ERRs();
 			break;
 		}
-#else
+#elif defined( MTX__USE_COUNTER )
+#	ifdef MTX__CONTROL
+		if ( *Handler == MTX_RELEASED_MUTEX )
+			ERRu();
+#	endif
 		if ( *Handler != 0 )
 			return false;
 
@@ -154,7 +174,7 @@ namespace mtx {
 #endif
 	}
 
-#ifndef MTX__USE_PTHREAD_MUTEX
+#ifdef MTX__USE_COUNTER
 
 	// Wait until mutex unlocked.
 	inline void WaitUntilUnlocked_( mutex_handler__ Handler )
@@ -181,7 +201,11 @@ namespace mtx {
 #ifdef MTX__USE_PTHREAD_MUTEX
 		if ( pthread_mutex_lock( Handler ) != 0 )
 			ERRs();
-#else
+#elif defined( MTX__USE_COUNTER )
+#	ifdef MTX__CONTROL
+		if ( *Handler == MTX_RELEASED_MUTEX )
+			ERRu();
+#	endif
 		if ( !TryToLock( Handler ) )
 			WaitUntilUnlocked_( Handler );
 #endif
@@ -193,9 +217,33 @@ namespace mtx {
 #ifdef MTX__USE_PTHREAD_MUTEX
 		if ( pthread_mutex_unlock( Handler ) != 0 )
 			ERRs();
-#else
+#elif defined( MTX__USE_COUNTER )
+#	ifdef MTX__CONTROL
+		if ( *Handler == MTX_RELEASED_MUTEX )
+			ERRu();
+		if ( *Handler == 0 )
+			ERRu();
+#	endif
 		(*Handler)--;
 #endif
+	}
+
+	//f Delete the mutex of handler 'Handler'.
+	inline void Delete( mutex_handler__ Handler )
+	{
+#ifdef MTX__USE_PTHREAD_MUTEX
+		if ( pthread_mutex_destroy( Handler ) != 0 ) {
+				ERRs();
+		}
+#endif
+#ifdef MTX__CONTROL
+		if ( *Handler != 0 )
+			ERRu();
+		*Handler = MTX_RELEASED_MUTEX;
+#else
+		free( Handler );
+#endif
+
 	}
 
 	//c A mutex.
